--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+app.jwtSecret=JWTSuperSecretKey
+app.jwtExpirationInMs=604800000
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/b103
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
