--- a/backend/bin/main/application.properties
+++ b/backend/bin/main/application.properties
@@ -1,7 +1,17 @@
+app.jwtSecret=JWTSuperSecretKey
+app.jwtExpirationInMs=604800000
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/b103
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+
+
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.initialization-mode=always
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
