--- a/backend/bin/main/application.properties
+++ b/backend/bin/main/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 
 app.jwtSecret=JWTSuperSecretKey
