--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 .gradle
 build/
 bin/
+src/main/**/images/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
