--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "nuka-carousel": "^4.7.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
