--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/b103
+spring.datasource.url=jdbc:mariadb://k3b103.p.ssafy.io:3306/b103
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
-spring.jpa.generate-ddl=true
 
 logging.level.org.hibernate.SQL=DEBUG
 
