--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,16 @@
     "react-modular-audio-player": "^1.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "@vardius/react-user-media": "^1.0.0",
+    "express": "^4.17.0",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.12.0",
+    "peer-data": "^3.2.2",
+    "peer-data-server": "^1.0.10",
+    "react-peer-data": "^1.1.2",
+    "sass-loader": "^7.1.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
