--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5'
 	implementation platform("com.google.cloud:libraries-bom:5.3.0");
 	implementation("com.google.cloud:google-cloud-speech");
+
+	implementation 'org.apache.commons:commons-exec:1.3'
+
 	compile ("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.5.1")
 	compile 'com.google.cloud:google-cloud-speech:1.24.5'
 	annotationProcessor 'org.projectlombok:lombok'
