--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,28 +9,29 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
-    "nuka-carousel": "^4.7.1",
-    "react-bootstrap": "^1.3.0",
-    "react-cookie": "^4.0.3",
-    "react-h5-audio-player": "^3.4.1",
-    "react-mic": "^12.4.6",
-    "react-modular-audio-player": "^1.2.0",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0",
     "@vardius/react-user-media": "^1.0.0",
+    "axios": "^0.20.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.12.0",
+    "nuka-carousel": "^4.7.1",
     "peer-data": "^3.2.2",
     "peer-data-server": "^1.0.10",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.3.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.8.6",
+    "react-h5-audio-player": "^3.4.1",
+    "react-mic": "^12.4.6",
+    "react-modular-audio-player": "^1.2.0",
+    "react-pageflip": "^1.0.0",
     "react-peer-data": "^1.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
     "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
