--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,5 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://k3b103.p.ssafy.io:443/"
+  "proxy": "https://k3b103.p.ssafy.io/api/"
 }
