--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@vardius/react-user-media": "^1.0.0",
+    "@wmik/use-media-recorder": "^1.0.0-alpha.4",
     "axios": "^0.20.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.0",
@@ -23,6 +24,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-h5-audio-player": "^3.4.1",
+    "react-media-recorder": "^1.4.0",
     "react-mic": "^12.4.6",
     "react-modular-audio-player": "^1.2.0",
     "react-pageflip": "^1.0.0",
