--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.0",
     "font-awesome": "^4.7.0",
+    "http-proxy-middleware": "^1.0.6",
     "node-sass": "^4.12.0",
     "nuka-carousel": "^4.7.1",
     "peer-data": "^3.2.2",
@@ -54,6 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://k3b103.p.ssafy.io:8080"
+  }
 }
